# boop

./: .gitignore  README.md
Boop/Boop/: Info.plist
Boop/Boop.xcodeproj/: project.pbxproj
Boop/Boop/App/: AppDelegate.swift  BoopApp.swift
Boop/Boop/Models/: AppSettings.swift  Session.swift  SessionState.swift  SocketMessage.swift
Boop/Boop/Resources/: hook.bash  hook.zsh
Boop/Boop/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
Boop/Boop/Services/: ConfigurationManager.swift  DNDChecker.swift  LaunchAtLoginService.swift  NotificationDispatcher.swift  SessionManager.swift  ShellIntegrationService.swift  SocketServer.swift
Boop/Boop/Utilities/: TopicGenerator.swift
Boop/Boop/Views/Components/: QRCodeView.swift  StatusIndicator.swift
Boop/Boop/Views/MenuBar/: ConnectionStatusView.swift  MenuBarIcon.swift  MenuBarView.swift  SessionRowView.swift
Boop/Boop/Views/Onboarding/: CompletionView.swift  OnboardingCoordinator.swift  PhoneSetupView.swift  ShellIntegrationView.swift  WelcomeView.swift
Boop/Boop/Views/Settings/: SettingsView.swift
boop-pty/: Cargo.toml
boop-pty/src/: error.rs  main.rs  terminal.rs
boop-pty/src/detector/: buffer.rs  mod.rs  patterns.rs  state.rs
boop-pty/src/ipc/: client.rs  mod.rs  protocol.rs
boop-pty/src/pty/: handler.rs  mod.rs  resize.rs
docs/: boop-prd.md
